# aspergillus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.pebbles/: config.json
docs/: design.md  implementation-plan.md
src/aspergillus/: __init__.py  __main__.py  io_blocklist.py
src/aspergillus/rules/: __init__.py  level2.py  level3.py
tests/: test_cli.py  test_level2.py  test_level3.py  test_orchestrator_integration.py
